--- a/src/index.html
+++ b/src/index.html
@@ -110,42 +110,42 @@
       </section>
 
       <!-- Преимущества -->
-      <section class="advantages">
-        <div class="advantages__wrapper container">
-          <h2 class="advantages__title title">Как это работает</h2>
-          <ul class="advantages__list advantages-list">
-            <li class="advantages-list__item">
+      <section class="work-principle">
+        <div class="work-principle__wrapper container">
+          <h2 class="work-principle__title title">Как это работает</h2>
+          <ul class="work-principle__list work-principle-list">
+            <li class="work-principle-list__item">
               <div
-                class="advantages-list__icon-container advantages-list__icon-container--leaf"
+                class="work-principle-list__icon-container work-principle-list__icon-container--leaf"
               ></div>
-              <p class="advantages-list__description description">
+              <p class="work-principle-list__description description">
                 Функциональное питание содержит только полезные питательные
                 вещества.
               </p>
             </li>
-            <li class="advantages-list__item">
+            <li class="work-principle-list__item">
               <div
-                class="advantages-list__icon-container advantages-list__icon-container--powder"
+                class="work-principle-list__icon-container work-principle-list__icon-container--powder"
               ></div>
-              <p class="advantages-list__description description">
+              <p class="work-principle-list__description description">
                 Выпускается в виде порошка, который нужно лишь залить кипятком и
                 готово.
               </p>
             </li>
-            <li class="advantages-list__item">
+            <li class="work-principle-list__item">
               <div
-                class="advantages-list__icon-container advantages-list__icon-container--cutlery"
+                class="work-principle-list__icon-container work-principle-list__icon-container--cutlery"
               ></div>
-              <p class="advantages-list__description description">
+              <p class="work-principle-list__description description">
                 Замените один-два приема обычной еды на наше функциональное
                 питание.
               </p>
             </li>
-            <li class="advantages-list__item">
+            <li class="work-principle-list__item">
               <div
-                class="advantages-list__icon-container advantages-list__icon-container--watch"
+                class="work-principle-list__icon-container work-principle-list__icon-container--watch"
               ></div>
-              <p class="advantages-list__description description">
+              <p class="work-principle-list__description description">
                 Уже через месяц наслаждайтесь изменениями к лучшему вашего
                 питомца!
               </p>
