--- a/source/form.html
+++ b/source/form.html
@@ -14,6 +14,7 @@
     <link rel="manifest" href="manifest.webmanifest" />
     <title>Подбор программы</title>
   </head>
+
   <body class="page-body">
     <header class="main-header main-header--line">
       <div class="main-header__wrapper">
@@ -172,7 +173,7 @@
               <label for="email" class="text-input__label">E-mail:*</label>
               <input
                 class="text-input__input"
-                type="text"
+                type="email"
                 id="email"
                 placeholder="kuklachev@gmail.com"
                 value="kuklachev@gmail.com"
@@ -186,12 +187,7 @@
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
               >
-                <path
-                  d="M0.500336 5.5V13.5H17.5041V5.5M0.500336 0.5H17.5041V2.5L9.00223 8.5L0.500336 2.5V0.5Z"
-                  stroke="black"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
+                <use xlink:href="img/sprite.svg#input-email-icon"></use>
               </svg>
             </li>
             <li class="contact-details__item text-input text-input--phone">
@@ -212,17 +208,11 @@
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
               >
-                <path
-                  d="M7.00224 8H15.5041M15.5041 8L13.0036 5.5M15.5041 8L13.0036 10.5M5.50191 0.5V5.5H2.50124V10.5H5.50191V15.5H3.00135C1.50102 15.5 0.500793 14.5 0.500793 13V3C0.500793 1.5 1.50102 0.5 3.00135 0.5H5.50191Z"
-                  stroke="black"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
+                <use xlink:href="img/sprite.svg#input-phone-icon"></use>
               </svg>
             </li>
           </ul>
         </section>
-
         <section class="form__section comments">
           <h2 class="comments__title title-medium">Комментарий</h2>
           <textarea
@@ -234,10 +224,10 @@
             placeholder="Расскажите обо всех повадках кота"
             required
           >
-Расскажите обо всех повадках кота</textarea
+Расскажите обо всех повадках кота
+        </textarea
           >
         </section>
-
         <section class="form__section additional">
           <h2 class="additional__title title-medium">Дополнительно</h2>
           <div class="additional__wrapper">
